--- a/index.html
+++ b/index.html
@@ -146,14 +146,11 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/pescao-apanao.jfif)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Salmones de Alaska</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                            corporis facilis qui architecto dolor, accusamus eveniet
-                            exercitationem fugit. Quod autem neque ducimus.
+                            El mejor pescado apanado de la región del bio-bio.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
